--- a/css/style.css
+++ b/css/style.css
@@ -73,9 +73,12 @@ body {
 .first-step {
   display: flex;
   flex-direction: column;
-  height: 100%;
   gap: calc(var(--padding-size) * 2);
 }
+
+/* .first-step__content {
+  flex: 1;
+} */
 
 .first-step .select-button--width {
   margin-top: 50px;
@@ -338,8 +341,18 @@ body {
 
 .final-step__img-wrapper {
   position: relative;
+  width: 263px;
   margin-top: 35px;
   margin-bottom: 40px;
+  border-radius: 35.478px;
+  overflow: hidden;
+}
+
+.final-step__img-wrapper img {
+  position: relative;
+  z-index: 2;
+  width: 100%;
+  height: 100%;
 }
 
 .final-step__img-gradient {
@@ -436,6 +449,17 @@ body {
   font-weight: 500;
   letter-spacing: -0.1rem;
   color: var(--text-grey);
+}
+
+.video {
+  position: absolute;
+  height: 96.5%;
+  width: 92%;
+  top: 10px;
+  left: 50%;
+  z-index: 1;
+  border-radius: 35.478px;
+  transform: translateX(-50%);
 }
 
 @media screen and (max-width: 768px) {
